[package]
name = "italian_numbers"
version = "0.1.0"
edition = "2021"
description = "A collection of functions to convert numbers to Italian word representations, to Roman number representations, and vice versa."
authors = ["Nicolò Zandarin <nikzanda@hotmail.it>"]
license = "MIT"
repository = "https://github.com/nikzanda/italian_numbers"
readme = "README.md"
rust-version = "1.78.0"
keywords = ["italian", "numbers", "converter", "roman", "language"]
categories = ["internationalization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"

[pre-release-hook]
command = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]

[release]
publish = true
push = true
